--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
       <p>However, no country is perfect; Italy has its fair share of issues. Italy began with a dictatorship under Benito Mussolini, which nearly destroyed the country. After WWII, the government put in place was the democratic republic system, which helped the country revive its economy and its people. </p>
 
       <p>Italy has been a member of NATO sine the end of the 20th century. While Italy may be plagued by the same issues that haunt any country (ex. crime, unemployment, pollution, etc.), it is still a country full of life and history, making it a desired vacation destination and a beautiful place to live. </p>
+
+    <h2>Geography</h2>
+      <p>Italy is famous for being a “boot-shaped” peninsula located in the Eastern hemisphere of the globe. The country extends far into the Mediterranean Sea, which is another one of its attractions; the Mediterranean Sea offers gorgeous beaches and is full of marine life that make it an intriguing attraction. </p>
+
+    <h3>Location</h3>
+      <p>Italy is located in Southern Europe, northeast of Tunisia. It extends far out into the Mediterranean Sea. While the islands Sardinia and Sicily are not directly connected to the main country itself, they are still considered a part of Italy. </p>
   </body>
 </html>
