--- a/index.html
+++ b/index.html
@@ -20,5 +20,46 @@
 
     <h3>Location</h3>
       <p>Italy is located in Southern Europe, northeast of Tunisia. It extends far out into the Mediterranean Sea. While the islands Sardinia and Sicily are not directly connected to the main country itself, they are still considered a part of Italy. </p>
+
+    <h3>Land Boundaries</h3>
+      <p>Italy has a total area of 301,340 sqkm, making it 73rd of the list of countries by size. Italy borders six other countries, with a varying amount of distance making up each boundary line. </p>
+
+      <table>
+        <tr>
+          <td>Country</td>
+          <td>Distance of Border</td>
+        </tr>
+
+        <tr>
+          <td>Austria</td>
+          <td>404 km</td>
+        </tr>
+
+        <tr>
+          <td>France</td>
+          <td>476 km</td>
+        </tr>
+
+        <tr>
+          <td>Vatican City</td>
+          <td>3.4 km</td>
+        </tr>
+
+        <tr>
+          <td>San Marino</td>
+          <td>37 km</td>
+        </tr>
+
+        <tr>
+          <td>Slovenia</td>
+          <td>218 km</td>
+        </tr>
+
+        <tr>
+          <td>Switzerland</td>
+          <td>698 km</td>
+        </tr>
+      </table>
+
   </body>
 </html>
