--- a/index.html
+++ b/index.html
@@ -24,42 +24,66 @@
     <h3>Land Boundaries</h3>
       <p>Italy has a total area of 301,340 sqkm, making it 73rd of the list of countries by size. Italy borders six other countries, with a varying amount of distance making up each boundary line. </p>
 
-      <table>
-        <tr>
-          <td>Country</td>
-          <td>Distance of Border</td>
-        </tr>
+        <table>
+          <tr>
+            <td>Country</td>
+            <td>Distance of Border</td>
+          </tr>
 
-        <tr>
-          <td>Austria</td>
-          <td>404 km</td>
-        </tr>
+          <tr>
+            <td>Austria</td>
+            <td>404 km</td>
+          </tr>
 
-        <tr>
-          <td>France</td>
-          <td>476 km</td>
-        </tr>
+          <tr>
+            <td>France</td>
+            <td>476 km</td>
+          </tr>
 
-        <tr>
-          <td>Vatican City</td>
-          <td>3.4 km</td>
-        </tr>
+          <tr>
+            <td>Vatican City</td>
+            <td>3.4 km</td>
+          </tr>
 
-        <tr>
-          <td>San Marino</td>
-          <td>37 km</td>
-        </tr>
+          <tr>
+            <td>San Marino</td>
+            <td>37 km</td>
+          </tr>
 
-        <tr>
-          <td>Slovenia</td>
-          <td>218 km</td>
-        </tr>
+          <tr>
+            <td>Slovenia</td>
+            <td>218 km</td>
+          </tr>
 
-        <tr>
-          <td>Switzerland</td>
-          <td>698 km</td>
-        </tr>
-      </table>
+          <tr>
+            <td>Switzerland</td>
+            <td>698 km</td>
+          </tr>
+        </table>
+
+      <p>Italy has a coastline of 7,600 km total along the Mediterranean Sea. </p>
+
+    <h3>Environment</h3>
+      <p>Italy’s climate varies based on geographic location. Italy is hot and dry in the south where the North is more mountainous. Italy’s mean elevation is 538, with the highest point being Mont Blanc de Courymayeur at 4,748 m and the lowest point being the Mediterranean Sea at 0 m. </p>
+
+    <p>Italy has an abundance of natural resources, including:</p>
+
+    <ul>
+      <li>Coal</li>
+      <li>Mercury</li>
+      <li>Marble</li>
+      <li>Pumice</li>
+      <li>Feldspar</li>
+      <li>Natural Gas</li>
+      <li>Fish </li>
+      <li>Zinc</li>
+      <li>Potash</li>
+      <li>Asbestos</li>
+    </ul>
+
+
+
+
 
   </body>
 </html>
