--- a/index.html
+++ b/index.html
@@ -81,7 +81,71 @@
       <li>Asbestos</li>
     </ul>
 
+  <h3>Environmental Agreements</h3>
+    <p>Italy does contribute to an immense amount of pollution, in part because of all the tourism. Therefore, Italy has signed numerous agreements to help lessen its negative effects on the environment. Some of these agreements include:</p>
+    <ul>
+      <li>Air Pollution Agreement</li>
+      <li>Climate Change-Paris Agreement</li>
+      <li>Comprehensive Nuclear Test Ban</li>
+      <li>Endangered Species</li>
+      <li>Hazardous Wastes</li>
+      <li>Law of the Sea</li>
+      <li>Marine Dumping-London Convention</li>
+      <li>Ozone Layer Protection</li>
+      <li>Ship Pollution</li>
+      <li>Wetlands</li>
+      <li>Whaling</li>
+    </ul>
 
+    <h2>People and Society</h2>
+      <p>Italy is home to a large population of 62,390,364 people, not including the tourists and visitors that travel there yearly. The majority of residents are Italian, with small numbers of people also being German, French, and Slovene. This means that the official language of Italy is Italian, with small areas speaking other languages such as German and French, depending on the population.</p>
+
+      <p>With Italy’s nearness to the Vatican City, it means that 80.8% of the population is Roman Catholic. However, about 4.9% of people are Muslim and 13.4% are unaffiliated with a religion. </p>
+
+    <h3>Ages of Population</h3>
+      <p>The median age of the population is 46.5 years; the age is increased due to the death rate being 10.7 deaths/1,000 population, which isn’t very high compared to other countries. The population is growing at a rate of 0.09%; the majority of the population comes from people who migrate later in life. The age structure of Italy is as follows:</p>
+
+      <ol>
+        <li>0-14 years:13.45%</li>
+        <li>15-24 years: 9.61%</li>
+        <li>25-54 years: 40.86%</li>
+        <li>55-64 years: 14%</li>
+        <li>65 years and over: 22.08%</li>
+      </ol>
+
+    <h3>Infants and Birth</h3>
+      <p>The birthrate is 8.37 births/1,000 population, with the infant mortality rate at 3.14 deaths/1,000 live births. Life expectancy at birth is 82.67 years, with females expected to live longer. </p>
+
+      <p>The average age for first-time mothers is about 31.3 years. Approximately 1.47 children is born per woman. </p>
+
+    <h3>Urbanization</h3>
+      <p>The population of Italy is really distributed along the country. However, urban centers like Rome, Milan, and Naples attract denser populations. There is a 0.27% rate of urbanization annually, bringing the Urban Population up to 71.3% of the total population. With Rome being the capital of Italy, it has the largest urban population of 4.278 million people. </p>
+
+    <h3>Health and Safety</h3>
+      <p>Drinking water has been improved for 100% of the population and is accessible to the entire population. Sanitation facilities are also accessible to 98.8% of the population. </p>
+
+      <p>About 0.2% of the population is living with HIV/AIDS, which is about 140,000 people. However, deaths due to HIV/AIDS is less than 1,000. The current health expenditure of Italy is 8.7%, with physician density at 3.98 physicians/1,000 populations. </p>
+
+      <p>The major infectious disease affecting Italy for the past two years is Covid-19 (which is the case for most countries globally). There have been about 214.4 deaths per 100,000 deaths due to Covid-19. </p>
+
+    <h3>Education</h3>
+      <p>Education expenditure is at 4% of GDP, which puts Italy at 98th on the list of countries and education. 99.2% of the population meets literacy requirements (which are reading and writing). School life expectancy is 16 years on average (but females are expected to be in school for longer at 17 years. </p>
+
+    <h3>Environmental Issues</h3>
+      <p>Italy’s part in climate change has been discussed previously, but below is a more detailed explanation:</p>
+      <ul>
+        <li>Air Pollution Agreement</li>
+        <li>Climate Change-Paris Agreement</li>
+        <li>Comprehensive Nuclear Test Ban</li>
+        <li>Endangered Species</li>
+        <li>Hazardous Wastes</li>
+        <li>Law of the Sea</li>
+        <li>Marine Dumping-London Convention</li>
+        <li>Ozone Layer Protection</li>
+        <li>Ship Pollution</li>
+        <li>Wetlands</li>
+        <li>Whaling</li>
+      </ul>
 
 
 
