--- a/index.html
+++ b/index.html
@@ -133,19 +133,16 @@
 
     <h3>Environmental Issues</h3>
       <p>Italy’s part in climate change has been discussed previously, but below is a more detailed explanation:</p>
-      <ul>
-        <li>Air Pollution Agreement</li>
-        <li>Climate Change-Paris Agreement</li>
-        <li>Comprehensive Nuclear Test Ban</li>
-        <li>Endangered Species</li>
-        <li>Hazardous Wastes</li>
-        <li>Law of the Sea</li>
-        <li>Marine Dumping-London Convention</li>
-        <li>Ozone Layer Protection</li>
-        <li>Ship Pollution</li>
-        <li>Wetlands</li>
-        <li>Whaling</li>
-      </ul>
+
+      <dl>
+        <dt>Air pollution</dt>
+        <dd>from industrial emissions such as sulfur dioxide </dd>
+        <dt>Coastal and inland river pollution</dt>
+        <dd>from industrial and agricultural effluents</dd>
+        <dt>Damage to lakes</dt>
+        <dd>due to acid rain</dd>
+        <dt>Waste treatment and disposal facilities</dt>
+        <dd>inadequate, which causes environmental damage</dt>
 
 
 
