--- a/index.html
+++ b/index.html
@@ -145,6 +145,42 @@
         <dd>inadequate, which causes environmental damage</dt>
       </dl>
 
+      <p>There are 29.524 million tons of solid waste produced annually by the population. However, only 7,646,716 tons are recycled. </p>
+
+    <h2>Government</h2>
+      <p>Italy (known as Italia to locals) has a parliamentary republic government. The capital of Italy is Rome. Compared to Washington, DC, Italy is 6 hours ahead in time. Italy gained independence as its own country on March 17th, 1861. Politics are divided into numerous parties: Democratic Party, Forza Italia, Brothers of Italy, Free and Equal, More Europe, and Popular Civic List. </p>
+
+    <h3>Administrative Divisions</h3>
+      <p>There are 15 regions in Italy and 5 autonomous regions in Italy. Regions include:</p>
+
+        <ul>
+          <li>Abruzzo</li>
+          <li>Basilicata</li>
+          <li>Calabria</li>
+          <li>Campania</li>
+          <li>Emilia-Romagna</li>
+          <li>Lazio</li>
+          <li>Liguria</li>
+          <li>Lombardia</li>
+          <li>Marche</li>
+          <li>Molise</li>
+          <li>Piemonte</li>
+          <li>Puglia</li>
+          <li>Toscana</li>
+          <li>Umbria</li>
+          <li>Veneto</li>
+        </ul>
+
+      <p>The five autonomous regions are:</p>
+        <ul>
+          <li>Friuli Venezia Giulia</li>
+          <li>Sardegna</li>
+          <li>Sicilia</li>
+          <li>Trentino-Alto Adige</li>
+          <li>Valle d’Aosta</li>
+        </ul>
+
+    <h3>Constitution</h3>
 
 
   </body>
