--- a/index.html
+++ b/index.html
@@ -181,7 +181,19 @@
         </ul>
 
     <h3>Constitution</h3>
+      <p>The constitution of Italy was last enacted December 22nd, 1947, and was entered into force January 1st, 1948. To get an amendment added to the constitution, it must first be proposed by both houses of Parliament. It then must be approved by most of each house on the second vote. The constitution of Italy has been amended numerous times, with the last added in 2020. </p>
 
+    <h3>Citizenship</h3>
+      <p>Unlike the United States, a person cannot be an Italian citizen by birth; one parent must be a citizen of Italy. Refugees must be residents for at least 5 years before becoming a citizen. However, EU nationals only must achieve residency of 4 years. </p>
+
+    <h3>Government Branches</h3>
+      <p>The chief of state is President Sergio Mattarella, who has been in office since February of 2015. Mario Draghi is the prime minister, and he oversees appointing Council of Ministers. </p>
+
+      <p>The president is elected by indirectly by the electoral college for a term of 7 years. The prime minister is then appointed by the president. </p>
+
+      <p>In the legislative branch, there are 321 seats; each member then serves for life. The Chamber of Deputies has 630 seats, and they serve for 5 years. </p>
+
+      <p>The Supreme Court of Cassation is the highest court of the Judicial Branch. The court has 54 different justices and 288 judges. These judges may serve for life.</p>
 
   </body>
 </html>
