--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
       <p>Sections:</p>
       <p><a href="#Geography"> Geography </a>
-      <p><a href="#People and Society"> Return to Top </a>
-      <p><a href="#Government"> Return to Top </a>
+      <p><a href="#People and Society"> People and Society </a>
+      <p><a href="#Government"> Government </a>
     <h2 id="Geography">Geography</h2>
     <img src="italy-map.JPG" alt="Map of Italy" />
       <p>Italy is famous for being a “boot-shaped” peninsula located in the Eastern hemisphere of the globe. The country extends far into the Mediterranean Sea, which is another one of its attractions; the Mediterranean Sea offers gorgeous beaches and is full of marine life that make it an intriguing attraction. </p>
