--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <p>Sections:</p>
       <p><a href="#Geography"> Geography </a>
-      <p><a href="#People and Society"> People and Society </a>
+      <p><a href="#People_and_Society"> People and Society </a>
       <p><a href="#Government"> Government </a>
     <h2 id="Geography">Geography</h2>
     <img src="italy-map.JPG" alt="Map of Italy" />
@@ -103,7 +103,7 @@
       <li>Whaling</li>
     </ul>
 
-    <h2 id="People and Society">People and Society</h2>
+    <h2 id="People_and_Society">People and Society</h2>
       <p>Italy is home to a large population of 62,390,364 people, not including the tourists and visitors that travel there yearly. The majority of residents are Italian, with small numbers of people also being German, French, and Slovene. This means that the official language of Italy is Italian, with small areas speaking other languages such as German and French, depending on the population.</p>
 
       <p>With Italy’s nearness to the Vatican City, it means that 80.8% of the population is Roman Catholic. However, about 4.9% of people are Muslim and 13.4% are unaffiliated with a religion. </p>
